<resources>
    <string name="app_name">Q\'d Up</string>
    <string name="find">Find</string>
    <string name="tempkey">tempkey</string>
    <string name="server_key">Server Key:</string>
    <string name="search">Search</string>
    <string name="view_queue">View Queue</string>
    <string name="queue">Queue</string>
    <string name="previous">Previous</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="continue_text">Continue</string>
    <string name="join">Join</string>
    <string name="host">Host</string>
    <string name="q_d_up">Q\'d Up</string>
</resources>
